--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,10 @@ name = "rustonacci"
 description = "A fast and memory efficient fibonacci generator."
 readme = "README.md"
 authors = [
-  { name = "Cellan Ha;;", email = "hallcellan@gmail.com" },
+  { name = "Cellan Hall", email = "hallcellan@gmail.com" },
 ]
 license = { file = "LICENSE" }
 requires-python = ">=3.8"
-dependencies = [
-  "typing_extensions >= 4.0.1; python_version < '3.9'",
-]
 keywords = ["fibonacci", "rust"]
 classifiers = [
   "Development Status :: 4 - Beta",
